--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body {
     padding: 20px;
 }
 
-#grid {
+.grid {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    height: auto;
-    width: auto;
+    min-height: 940px;
+    min-width: 940px;
     border: 1px solid red;
     padding: 0;
 }
@@ -21,6 +21,9 @@ body {
 
 .gridElement {
     background-color: blue;
-    margin: 1px;
+    margin: 0;
     padding: 0;
+}
+.gridElementActive {
+    background-color: lightgreen;
 }
