--- a/style.css
+++ b/style.css
@@ -7,10 +7,8 @@ body {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    min-height: 940px;
-    min-width: 940px;
-    border: 1px solid red;
     padding: 0;
+    margin-top: 10px;
 }
 
 .gridRow {
@@ -20,10 +18,7 @@ body {
 }
 
 .gridElement {
-    background-color: blue;
+    background-color: rgb(128, 128, 148);
     margin: 0;
     padding: 0;
-}
-.gridElementActive {
-    background-color: lightgreen;
 }
